# ECommercePortal01Aug

./: .gitignore  CI_CD_TROUBLESHOOTING.md  CONTRIBUTING.md  INTEGRATION_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  README.md  config.yaml  conftest.py  demo.py  pyproject.toml  requirements.txt  test_basic.py  verify_setup.py
.github/workflows/: ci.yml
features/: authentication.feature  cart.feature  inventory.feature
pages/: base_page.py  cart_page.py  login_page.py  products_page.py
step_definitions/: test_authentication_steps.py  test_cart_steps.py  test_inventory_steps.py
tests/: test_authentication.py  test_cart.py  test_inventory.py
utilities/: helpers.py
